[gd_scene load_steps=11 format=2]

[ext_resource path="res://img/background.png" type="Texture" id=1]
[ext_resource path="res://main_scene.gd" type="Script" id=2]
[ext_resource path="res://launcher.tscn" type="PackedScene" id=3]
[ext_resource path="res://tree.tscn" type="PackedScene" id=4]
[ext_resource path="res://bush.tscn" type="PackedScene" id=5]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://rock.tscn" type="PackedScene" id=7]
[ext_resource path="res://desk.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 588.039, 61.2274 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25.4872, 309.467 )

[node name="main" type="Node2D"]
light_mask = -2147483647
script = ExtResource( 2 )

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="background" type="StaticBody2D" parent="."]

[node name="sprite_bg" type="Sprite" parent="background"]
scale = Vector2( 0.534855, 0.556783 )
texture = ExtResource( 1 )
centered = false

[node name="collider_bg" type="CollisionShape2D" parent="background"]
position = Vector2( 510.636, 26.4285 )
shape = SubResource( 1 )

[node name="left_border" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_border"]
position = Vector2( -18.8776, 303.928 )
shape = SubResource( 2 )

[node name="right_border" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_border"]
position = Vector2( 1039.21, 301.097 )
shape = SubResource( 2 )

[node name="launcher" parent="." instance=ExtResource( 3 )]
position = Vector2( 512, 533 )
scale = Vector2( 0.5, 0.5 )

[node name="tree" parent="." instance=ExtResource( 4 )]
position = Vector2( 86.5899, 447.807 )

[node name="tree2" parent="." instance=ExtResource( 4 )]
position = Vector2( 872.917, 258.174 )

[node name="bush" parent="." instance=ExtResource( 5 )]
position = Vector2( 257.061, 252.906 )
scale = Vector2( 0.5, 0.5 )

[node name="bush2" parent="." instance=ExtResource( 5 )]
position = Vector2( 336.791, 450.212 )
scale = Vector2( 0.5, 0.5 )

[node name="bush3" parent="." instance=ExtResource( 5 )]
position = Vector2( 960.005, 448.84 )
scale = Vector2( 0.5, 0.5 )

[node name="rock" parent="." instance=ExtResource( 7 )]
position = Vector2( 711.625, 440.987 )
scale = Vector2( 0.5, 0.5 )

[node name="desk" parent="." instance=ExtResource( 8 )]
position = Vector2( 535.02, 208.81 )
scale = Vector2( 0.5, 0.5 )

[node name="timer" type="Timer" parent="."]
wait_time = 3.2
autostart = true
[connection signal="timeout" from="timer" to="." method="_on_Timer_timeout"]
